@@ -7,21 +7,21 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.91 (gritter) 9/4/06";
+	"@(#)/usr/ucb/otfdump.sl	7.92 (gritter) 9/4/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.91 (gritter) 9/4/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.91 (gritter) 9/4/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.92 (gritter) 9/4/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.92 (gritter) 9/4/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.91 (gritter) 9/4/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.92 (gritter) 9/4/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.91 (gritter) 9/4/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.92 (gritter) 9/4/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.91";
+const char revision[] = "7.92";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.83 (gritter) 9/4/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
-n1.c: * Sccsid @(#)n1.c	1.118 (gritter) 9/4/06
+n1.c: * Sccsid @(#)n1.c	1.119 (gritter) 9/4/06
 n2.c: * Sccsid @(#)n2.c	1.29 (gritter) 9/4/06
 n3.c: * Sccsid @(#)n3.c	1.148 (gritter) 9/4/06
 n4.c: * Sccsid @(#)n4.c	1.72 (gritter) 9/4/06
